# LearnDirect3D

./: .gitignore  CMakeLists.txt  README.md  Script.bat
D3D/: CMakeLists.txt
D3D/Graphics/: FrameResource.cpp  FrameResource.h
LearnDirect3D/: LearnDirect3D.sln
LearnDirect3D/Graphics/: FrameResource.h
LearnDirect3D/LearnDirect3D/: LearnDirect3D.vcxproj  main.cpp  test.h
Note/: CPU与GPU间的交互.md  Direct3D的初始化.md  不同形状的几何体.md  利用Direct3D绘制几何体.md  利用Direct3D绘制几何体2.md  必备的数学知识.md  第一部分 必备的数学知识.md  资料.md
Shapes/: CMakeLists.txt
Shapes/App/: ShapesApp.cpp  ShapesApp.h
lib/Debug/: D3D.lib
